<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#57737070"
    tools:context=".screens.makerequestactivity.MakeRequestActivity">

    <TextView
        android:id="@+id/makeRequestTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/request_title"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/cardview_dark_background"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/selectedDateHireTextView"
        android:layout_width="330dp"
        android:layout_height="34dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="12dp"
        android:text="@string/selected_date_title"
        android:textAlignment="center"
        android:textColor="@color/cardview_dark_background"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/makeRequestTitleTextView" />

    <TextView
        android:id="@+id/current_time_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="16dp"
        android:text="@string/hour_placeholder"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selected_time_title" />

    <TextView
        android:id="@+id/selected_time_title"
        android:layout_width="330dp"
        android:layout_height="36dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="4dp"
        android:text="@string/selected_date_hour"
        android:textAlignment="center"
        android:textColor="@color/cardview_dark_background"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendarRequestView" />

    <Button
        android:id="@+id/set_hour_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="146dp"
        android:layout_height="48dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="8dp"
        android:text="@string/set_hour_button"
        app:layout_constraintStart_toEndOf="@+id/current_time_text"
        app:layout_constraintTop_toBottomOf="@+id/selected_time_title" />

    <CalendarView
        android:id="@+id/calendarRequestView"
        android:layout_width="331dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectedDateHireTextView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextTextMultiLine"
        android:layout_width="330dp"
        android:layout_height="61dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_time_text"
        android:hint="Explain your requirement"
        app:errorEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <!--this is the actual edit text which takes the input-->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_ExplainedJob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/create_button"
        style="@android:style/Widget.Holo.Button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="4dp"
        android:text="@string/create_button"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine" />

</androidx.constraintlayout.widget.ConstraintLayout>